Dark mode fix : posts list hover state

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -41,6 +41,7 @@
     --bg-section-color: #ffffff;
     --fg-post-color: #4d4d4d;
     --fg-link-color: #4d4d4d;
+    --special-hover-color: #000000;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -49,6 +50,7 @@
         --bg-section-color: #2c2a27;
         --fg-post-color: #cccccc;
         --fg-link-color: #ff706b;
+        --special-hover-color: #ffffff;
     }
 }
 
@@ -527,7 +529,7 @@ html[lang=en] .index li.fr-post a > *:not(.lang-indicator) {
   display: none;
 }
 .index a:hover h2 {
-    color: #000;
+    color: var(--special-hover-color);
 }
 section.archive-post > a {
     padding-top: 0;
@@ -537,7 +539,7 @@ section.archive-post > a {
 section.archive-post:hover {
     box-shadow:
         0 1px 4px rgba(0, 0, 0, 0.04),
-        0 0 0 3px rgba(0, 0, 0, 0.14) !important;
+        0 0 0 3px rgba(255, 112, 107, .4) !important;
 }
 section.archive-post {
     margin-bottom: 20px;
@@ -615,7 +617,7 @@ div.post a {
     border-bottom: 2px solid rgba(0, 0, 0, 0.1);
 }
 div.post a:hover {
-    border-color: #111;
+    border-color: var(--special-hover-color);
     text-decoration: none;
 }
 .post a img {
